crates/nash-codegen/src/build/tests/snapshots/nash_codegen__build__tests__optimizer__application_argument_trace_stays_after_first_stage.snap
---
source: crates/nash-codegen/src/build/tests/optimizer.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nchoose : int -> int -> int -> int\nchoose n =\n    if Builtin.equalsInteger n 0 then\n        \\x -> trace \"first\" (\\y -> trace \"second\" (Builtin.addInteger x y))\n    else\n        choose (Builtin.subtractInteger n 1)\nmain : int\nmain =\n    let\n        p = choose 3 20\n    in\n    p (trace \"argument\" 22)\n"
---
--- unoptimized Core
let message#11 : string = "first" in
let message#12 : string = "second" in
let message#13 : string = "argument" in
let fromInt#3 : int -> int = \value#6 : int -> value#6 in
let fromString#4 : string -> string = \value#7 : string -> value#7 in
letrec
  choose#5 : int -> int -> int -> int [static []] = \n#8 : int -> case@Bool equalsInteger n#8 (fromInt#3 0) of
    True -> \x#9 : int -> trace (fromString#4 message#11) in \y#10 : int -> trace (fromString#4 message#12) in addInteger x#9 y#10
    False -> choose#5 (subtractInteger n#8 (fromInt#3 1))
in
let p#2 : int -> int = choose#5 (fromInt#3 3) (fromInt#3 20) in
let main#1 : int = p#2 (trace (fromString#4 message#13) in fromInt#3 22) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_11
    [(lam message_12
      [(lam message_13
        [(lam fromInt_3
          [(lam fromString_4
            [(lam choose_5
              [(lam p_2
                [(lam main_1 main_1)
                  [p_2
                    (force
                      [[(force (builtin trace)) [fromString_4 message_13]]
                        (delay [fromInt_3 (con integer 22)])])]])
                [[choose_5 [fromInt_3 (con integer 3)]] [fromInt_3 (con integer 20)]]])
              [(lam self_14 [self_14 self_14])
                (lam self_14
                  (lam n_8
                    (case
                      [[(builtin equalsInteger) n_8] [fromInt_3 (con integer 0)]]
                      [[self_14 self_14]
                        [[(builtin subtractInteger) n_8] [fromInt_3 (con integer 1)]]]
                      (lam x_9
                        (force
                          [[(force (builtin trace)) [fromString_4 message_11]]
                            (delay
                              (lam y_10
                                (force
                                  [[(force (builtin trace)) [fromString_4 message_12]]
                                    (delay [[(builtin addInteger) x_9] y_10])])))])))))]])
            (lam value_7 value_7)])
          (lam value_6 value_6)])
        (con string "argument")])
      (con string "second")])
    (con string "first")])
--- optimized Core
letrec
  choose#21 : int -> int -> int -> int [static []] = \n#22 : int -> let anf#28 : bool = equalsInteger n#22 0 in
  case@Bool anf#28 of
    True -> \x#23 : int -> trace "first" in \y#24 : int -> trace "second" in addInteger x#23 y#24
    False -> let anf#32 : int = subtractInteger n#22 1 in
    choose#21 anf#32
in
let anf#34 : int -> int -> int = choose#21 3 in
let p#25 : int -> int = anf#34 20 in
let anf#37 : int = trace "argument" in 22 in
p#25 anf#37
--- optimized UPLC
(program 1.1.0
  [(lam builtin_38
    [(lam choose_21
      [(lam anf_34
        [(lam p_25
          [(lam anf_37 [p_25 anf_37])
            (force [[builtin_38 (con string "argument")] (delay (con integer 22))])])
          [anf_34 (con integer 20)]])
        [choose_21 (con integer 3)]])
      [(lam self_16 [self_16 self_16])
        (lam self_16
          (lam n_22
            [(lam anf_28
              (case
                anf_28
                [(lam anf_32 [[self_16 self_16] anf_32])
                  [[(builtin subtractInteger) n_22] (con integer 1)]]
                (lam x_23
                  (force
                    [[builtin_38 (con string "first")]
                      (delay
                        (lam y_24
                          (force
                            [[builtin_38 (con string "second")] (delay [[(builtin addInteger) x_23] y_24])])))]))))
              [[(builtin equalsInteger) n_22] (con integer 0)]]))]])
    (force (builtin trace))])
--- result
(con integer 42)
--- logs
["first", "argument", "second"]
