crates/nash-codegen/src/build/tests/snapshots/nash_codegen__build__tests__optimizer__application_failure_precedes_later_argument.snap
---
source: crates/nash-codegen/src/build/tests/optimizer.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nchoose : int -> int -> int -> int\nchoose n =\n    if Builtin.equalsInteger n 0 then\n        \\x -> trace \"first\" fail\n    else\n        choose (Builtin.subtractInteger n 1)\nmain : int\nmain =\n    let\n        p = choose 3 20\n    in\n    p (trace \"must not run\" 22)\n"
---
--- unoptimized Core
let message#10 : string = "first" in
let message#11 : string = "must not run" in
let fromInt#3 : int -> int = \value#6 : int -> value#6 in
let fromString#4 : string -> string = \value#7 : string -> value#7 in
letrec
  choose#5 : int -> int -> int -> int [static []] = \n#8 : int -> case@Bool equalsInteger n#8 (fromInt#3 0) of
    True -> \x#9 : int -> trace (fromString#4 message#10) in error
    False -> choose#5 (subtractInteger n#8 (fromInt#3 1))
in
let p#2 : int -> int = choose#5 (fromInt#3 3) (fromInt#3 20) in
let main#1 : int = p#2 (trace (fromString#4 message#11) in fromInt#3 22) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_10
    [(lam message_11
      [(lam fromInt_3
        [(lam fromString_4
          [(lam choose_5
            [(lam p_2
              [(lam main_1 main_1)
                [p_2
                  (force
                    [[(force (builtin trace)) [fromString_4 message_11]]
                      (delay [fromInt_3 (con integer 22)])])]])
              [[choose_5 [fromInt_3 (con integer 3)]] [fromInt_3 (con integer 20)]]])
            [(lam self_12 [self_12 self_12])
              (lam self_12
                (lam n_8
                  (case
                    [[(builtin equalsInteger) n_8] [fromInt_3 (con integer 0)]]
                    [[self_12 self_12]
                      [[(builtin subtractInteger) n_8] [fromInt_3 (con integer 1)]]]
                    (lam x_9
                      (force [[(force (builtin trace)) [fromString_4 message_10]] (delay (error))])))))]])
          (lam value_7 value_7)])
        (lam value_6 value_6)])
      (con string "must not run")])
    (con string "first")])
--- optimized Core
letrec
  choose#18 : int -> int -> int -> int [static []] = \n#19 : int -> let anf#24 : bool = equalsInteger n#19 0 in
  case@Bool anf#24 of
    True -> \x#20 : int -> trace "first" in error
    False -> let anf#27 : int = subtractInteger n#19 1 in
    choose#18 anf#27
in
let anf#29 : int -> int -> int = choose#18 3 in
let p#21 : int -> int = anf#29 20 in
let anf#32 : int = trace "must not run" in 22 in
p#21 anf#32
--- optimized UPLC
(program 1.1.0
  [(lam builtin_13
    [(lam choose_9
      [(lam anf_10
        [(lam p_11
          [(lam anf_12 [p_11 anf_12])
            (force [[builtin_13 (con string "must not run")] (delay (con integer 22))])])
          [anf_10 (con integer 20)]])
        [choose_9 (con integer 3)]])
      [(lam self_3 [self_3 self_3])
        (lam self_4
          (lam n_5
            [(lam anf_6
              (case
                anf_6
                [(lam anf_8 [[self_4 self_4] anf_8])
                  [[(builtin subtractInteger) n_5] (con integer 1)]]
                (lam x_7 (force [[builtin_13 (con string "first")] (delay (error))]))))
              [[(builtin equalsInteger) n_5] (con integer 0)]]))]])
    (force (builtin trace))])
--- result
error: ExplicitErrorTerm
--- logs
["first"]
