crates/nash-codegen/src/build/tests/snapshots/nash_codegen__build__tests__optimizer__builtin_pair_accessors.snap
---
source: crates/nash-codegen/src/build/tests/optimizer.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\nfirst : pair 'a 'b -> 'a\nfirst = .fst\nsecond : pair 'a 'b -> 'b\nsecond p = p.snd\nmain : (Data, Data)\nmain =\n    let\n        p = Builtin.trace \"pair\" (Builtin.mkPairData (I 20) (I 22))\n    in\n    (first p, second p)\n"
---
--- unoptimized Core
let message#15 : string = "pair" in
let first#3 : pair 'erased 'erased -> 'erased = \record#9 : pair 'erased 'erased -> let projection#13 : 'erased = fstPair record#9 in
projection#13 in
let second#4 : pair 'erased 'erased -> 'erased = \p#10 : pair 'erased 'erased -> let projection#14 : 'erased = sndPair p#10 in
projection#14 in
let fromString#5 : string -> string = \value#11 : string -> value#11 in
let fromInt#7 : int -> int = \value#12 : int -> value#12 in
let p#2 : pair Data Data = trace (fromString#5 message#15) (mkPairData ((\field#6 : int -> iData field#6) (fromInt#7 20)) ((\field#8 : int -> iData field#8) (fromInt#7 22))) in
let main#1 : (Data, Data) = constr 0 (first#3 p#2) (second#4 p#2) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_15
    [(lam first_3
      [(lam second_4
        [(lam fromString_5
          [(lam fromInt_7
            [(lam p_2 [(lam main_1 main_1) (constr 0 [first_3 p_2] [second_4 p_2])])
              [[(force (builtin trace)) [fromString_5 message_15]]
                [[(builtin mkPairData)
                  [(lam field_6 [(builtin iData) field_6]) [fromInt_7 (con integer 20)]]]
                  [(lam field_8 [(builtin iData) field_8]) [fromInt_7 (con integer 22)]]]]])
            (lam value_12 value_12)])
          (lam value_11 value_11)])
        (lam p_10
          [(lam projection_14 projection_14) [(force (force (builtin sndPair))) p_10]])])
      (lam record_9
        [(lam projection_13 projection_13) [(force (force (builtin fstPair))) record_9]])])
    (con string "pair")])
--- optimized Core
let p#29 : pair Data Data = trace "pair" (con (pair data data) ((I 20), (I 22))) in
let anf#37 : Data = fstPair p#29 in
let anf#38 : Data = sndPair p#29 in
constr 0 anf#37 anf#38
--- optimized UPLC
(program 1.1.0
  [(lam builtin_39
    [(lam builtin_40
      [(lam builtin_41
        [(lam p_29
          [(lam anf_37 [(lam anf_38 (constr 0 anf_37 anf_38)) [builtin_39 p_29]])
            [builtin_40 p_29]])
          [[builtin_41 (con string "pair")] (con (pair data data) ((I 20), (I 22)))]])
        (force (builtin trace))])
      (force (force (builtin fstPair)))])
    (force (force (builtin sndPair)))])
--- result
(constr 0 (con data (I 20)) (con data (I 22)))
--- logs
["pair"]
