crates/nash-codegen/src/build/tests/snapshots/nash_codegen__build__tests__optimizer__o2_discards_aliased_message_failure.snap
---
source: crates/nash-codegen/src/build/tests/optimizer.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\nlog : string -> int -> int\nlog = Builtin.trace\nmain : int\nmain = log (fail) 42\n"
---
--- unoptimized Core
let log#2 : string -> int -> int = trace in
let fromInt#3 : int -> int = \value#4 : int -> value#4 in
let main#1 : int = log#2 error (fromInt#3 42) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam log_2
    [(lam fromInt_3
      [(lam main_1 main_1) [[log_2 (error)] [fromInt_3 (con integer 42)]]])
      (lam value_4 value_4)])
    (force (builtin trace))])
--- optimized Core (O2)
42
--- optimized UPLC (O2)
(program 1.1.0 (con integer 42))
--- O0 result
error: ExplicitErrorTerm
--- O0 logs
[]
--- O2 result
(con integer 42)
--- O2 logs
[]
