crates/nash-codegen/src/build/tests/snapshots/nash_codegen__build__tests__optimizer__o2_discards_diverging_message.snap
---
source: crates/nash-codegen/src/build/tests/optimizer.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\nloop : unit -> string\nloop _ = loop ()\nmain : int\nmain = Builtin.trace (loop ()) 42\n"
---
--- unoptimized Core
let fromUnit#3 : unit -> unit = \value#7 : unit -> value#7 in
letrec
  loop#2 : unit -> string [static []] = \arg#5 : unit -> let match#6 : unit = arg#5 in
  loop#2 (fromUnit#3 ())
in
let fromInt#4 : int -> int = \value#8 : int -> value#8 in
let main#1 : int = trace (loop#2 (fromUnit#3 ())) (fromInt#4 42) in
main#1
--- unoptimized UPLC (not evaluated: diverging message)
[(lam fromUnit_3
  [(lam loop_2
    [(lam fromInt_4
      [(lam main_1 main_1)
        [[(force (builtin trace)) [loop_2 [fromUnit_3 (con unit ())]]]
          [fromInt_4 (con integer 42)]]])
      (lam value_8 value_8)])
    [(lam self_9 [self_9 self_9])
      (lam self_9
        (lam arg_5 (case arg_5 [[self_9 self_9] [fromUnit_3 (con unit ())]])))]])
  (lam value_7 value_7)]
--- optimized Core (O2)
42
--- optimized UPLC (O2)
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
